# game_toolkit

./: .gitignore  Cargo.toml
module/app/bevy/: Cargo.toml
module/app/bevy/src/: assets.rs  input.rs  lib.rs  main.rs  mechanics_bevy.rs  physics.rs  sound.rs  visual.rs
module/app/fyrox/: Cargo.toml
module/app/fyrox/src/: lib.rs  main.rs
module/app/main/: Cargo.toml
module/app/main/src/: main.rs
module/lib/_terminal_helper/: Cargo.toml
module/lib/_terminal_helper/src/: draw.rs  lib.rs
module/lib/derives/: Cargo.toml
module/lib/derives/src/: lib.rs
module/lib/derives/tests/: all_manual_test.rs  all_test.rs  as_mut_manual_test.rs  as_mut_test.rs  as_ref_manual_test.rs  as_ref_test.rs  deref_manual_test.rs  deref_mut_manual_test.rs  deref_mut_test.rs  deref_test.rs  from_inner_manual_test.rs  from_inner_test.rs  inner_from_manual_test.rs  inner_from_test.rs
module/lib/math/: Cargo.toml
module/lib/math/src/: lib.rs  value_of.rs
module/lib/math/src/d2/: collision.rs  mod.rs  vec.rs
module/lib/math/src/d2/cbox/: collider.rs  mod.rs
module/lib/math/src/d2/sphere/: collider.rs  mod.rs
module/lib/math/src/d3/: mod.rs  vec.rs
module/lib/mechanics/: Cargo.toml  readme.md
module/lib/mechanics/src/: asset_image.rs  lib.rs  movable.rs  pawn.rs  playground.rs  sound.rs
module/lib/physics/: Cargo.toml  lib.rs
module/lib/physics/src/: collider.rs  lib.rs
module/lib/toolkit/: Cargo.toml  readme.md
module/lib/toolkit/src/: lib.rs
module/lib/toolkit/src/bevy/: mod.rs  plugin.rs
module/lib/toolkit/src/bevy/plugin/: al.rs  assets_watch.rs  default.rs  dpad_control.rs  escape.rs  fps.rs  mouse_watch.rs
module/lib/toolkit/src/generic/: dyn_error.rs  map_of_vectors.rs  mod.rs  path_of_workspace.rs  runnable.rs
module/lib/toolkit/tests/: asset_load_events.rs  tracked_asset_loader.rs  tracked_asset_queue_event.rs
