[workspace]
resolver = "2"
members = [
  "module/app/bevy",
  "module/app/fyrox",
  "module/app/main",
  "module/lib/derives",
  "module/lib/math",
  "module/lib/mechanics",
  "module/lib/toolkit",
]
exclude = [
  "module/app/-*",
  "module/app/_*",
  "module/lib/-*",
  "module/lib/_*",
]
default-members = [ "module/app/main" ]

[profile.dev.package."*"]
opt-level = 3

## dependencies

[workspace.dependencies]

bevy = { version = "0.11.3", features = [ "wav" ], default-features = true }
bevy_math = { version = "0.11.3", features = [], default-features = false }
fyrox = "0.31.0"

crossterm = "0.27.0"
image = "0.24.7"
termcolor = "1.3.0"
ansi_colours = "1.2.2"

rand = "0.8.5"
sealed = "0.5.0"

[workspace.dependencies.diagnostics_tools]
git = "https://github.com/Wandalen/wTools"
package = "diagnostics_tools"
# branch = "alpha"
rev = "4f7a0202ae5ad932b4590b1eb36e6c95a52e46bc"

[workspace.dependencies.mod_interface]
git = "https://github.com/Wandalen/wTools"
package = "mod_interface"
# branch = "alpha"
rev = "4f7a0202ae5ad932b4590b1eb36e6c95a52e46bc"

[workspace.dependencies.impls_index]
git = "https://github.com/Wandalen/wTools"
package = "impls_index"
# branch = "alpha"
rev = "4f7a0202ae5ad932b4590b1eb36e6c95a52e46bc"

[workspace.dependencies.proc_macro_tools]
git = "https://github.com/Wandalen/wTools"
package = "proc_macro_tools"
# branch = "alpha"
rev = "4f7a0202ae5ad932b4590b1eb36e6c95a52e46bc"

## apps

[workspace.dependencies.app_bevy]
version = "0.1.0"
path = "./module/app/bevy"

# [workspace.dependencies.app_bevy_terminal]
# version = "0.1.0"
# path = "./module/app/bevy_terminal"

[workspace.dependencies.app_fyrox]
version = "0.1.0"
path = "./module/app/fyrox"

# [workspace.dependencies.app_terminal]
# version = "0.1.0"
# path = "./module/app/terminal"

## modules

[workspace.dependencies.game_mechanics]
version = "0.1.0"
path = "./module/lib/mechanics"

[workspace.dependencies.game_math]
version = "0.1.0"
path = "./module/lib/math"

[workspace.dependencies.game_physics]
version = "0.1.0"
path = "./module/lib/physics"

# [workspace.dependencies.game_terminal_helper]
# version = "0.1.0"
# path = "./module/lib/terminal_helper"

[workspace.dependencies.game_tookit]
version = "0.1.0"
path = "./module/lib/toolkit"

[workspace.dependencies.game_tookit_for_terminal]
version = "0.1.0"
path = "./module/lib/toolkit"
package = "game_tookit"
default-features = false
features = [ "generic" ]

[workspace.dependencies.game_tookit_for_bevy_terminal]
version = "0.1.0"
path = "./module/lib/toolkit"
package = "game_tookit"
default-features = false
features = [
  "generic_runnable",
  "generic_map_of_vectors",
  "generic_path_of_workspace",
  "bevy",
  "bevy_plugin_al",
  "bevy_audio",
  # "bevy_audio_wav",
  "bevy_sprite",
  "bevy_scene",
  "bevy_winit",
  "bevy_asset",
  "bevy_full",
]
