[package]
name = "app_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# bevy = { workspace = true, default-features = true }

game_mechanics = { workspace = true }
game_tookit = { workspace = true, features = [ "default" ] }
game_math = { workspace = true }
