[package]
name = "app_fyrox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fyrox = { workspace = true }
# rand = { workspace = true }

game_mechanics = { workspace = true }
game_tookit = { workspace = true }
game_math = { workspace = true }
